--- a/huafei.html
+++ b/huafei.html
@@ -67,6 +67,7 @@
        #text_buy {
            width:90%; height: 46px;background-color: red;margin-top: 10px;
            font-size:20px;color: #FFFFFF;border-radius: 4px;border:none;
+           margin-bottom: 20px;
            /*-webkit-box-shadow: 0px 9px 0px red, 0px 9px 25px rgba(0,0,0,.7);*/
            /*-moz-box-shadow: 0px 9px 0px red, 0px 9px 25px rgba(0,0,0,.7);*/
            /*box-shadow: 0px 9px 0px red, 0px 9px 25px rgba(0,0,0,.7);*/
