--- a/huafei.html
+++ b/huafei.html
@@ -96,7 +96,7 @@
        }
     </style>
 </head>
-<body style="margin: 0px ; width:100%" ng-app="myApp" ng-controller="myCtrl" >
+<body style="margin: 0px ; width:100%;padding-bottom: 20px" ng-app="myApp" ng-controller="myCtrl" >
 <div  id="top_tex" >购买中心</div>
 <img src="hello.png">
 <br>
