--- a/huafei.html
+++ b/huafei.html
@@ -124,6 +124,7 @@
 <div style="text-align:center;margin:0 auto;" >
     <input id ="text_input"  ng-model = "phones" >
     <input ng-click="go()" id = "text_buy" type="button"  value="立即购买"  >
+    <input id ="text_input4"  value="测试" >
 </div>
 <script>
     var app = angular.module('myApp', []);
