--- a/huafei.html
+++ b/huafei.html
@@ -94,6 +94,12 @@
            cursor:pointer;
            filter:alpha(opacity=100); -moz-opacity:1; -khtml-opacity: 1; opacity:1;
        }
+        .columns:active{
+
+        }
+        .unclick{
+
+        }
     </style>
 </head>
 <body style="margin: 0px ; width:100%;padding-bottom: 20px" ng-app="myApp" ng-controller="myCtrl" >
