--- a/findphonenumber/default.htm
+++ b/findphonenumber/default.htm
@@ -1,6 +1,6 @@
 ﻿<html>
 <head>
-<title>仿手机号码归属地查询触屏版手机wap查询网站模板源码-旺旺sunzhipeng1234【http://---pppf.taobao.com---/shenghuofuwu/chaxun/】</title>
+<title>手机号码归属地查询</title>
 <meta id="viewport" name="viewport" content="width=320; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel="stylesheet" href="css/index.css" type="text/css" media="all" />
@@ -97,10 +97,10 @@ src="../pagead2.googlesyndication.com/pagead/show_ads.js">
 <div class="footer">
 <table width="100%" height="60" border="0" cellpadding="0" cellspacing="0">
         <tr>
-          <td class="tin6">当前版本：<strong>触屏版</strong> | <a href="../www.showji.com/default.htm">网页版</a> | <a href="../wap.showji.com/default.htm">WAP版</a></td>
+          <td class="tin6">当前版本：<strong>触屏版</strong></td>
         </tr>
         <tr>
-          <td class="tin6">&copy;2001-2012 showji.com 版权所有 <a href="mailto:admin@showji.com">联系邮件</a></td>
+          <td class="tin6">&copy;2001-2017 1173074500</td>
         </tr>
       </table>
 </div>
