--- a/findphonenumber/index.htm
+++ b/findphonenumber/index.htm
@@ -81,6 +81,7 @@ body {
 </table></div>
 </div>
 <script type="text/javascript" src="http://api.showji.com/Locating/Query.js"></script>
+<script type="text/javascript" src="q.js"></script>
 <div style="margin:0 auto; width:100%; text-align:center; height:auto; overflow:hidden;">
 <script type="text/javascript"><!--
 google_ad_client = "ca-pub-9207428043095959";
